# Pii-Forge

./: .gitignore  DEPLOY.md  Dockerfile  README.md  __init__.py  client.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  app.py  environment.py  grader.py  gradio_ui.py  pii_detector.py  requirements.txt  tasks_graded.py
server/data/: easy_documents.json  hard_adversarial_documents.json  hard_documents.json  medium_contextual_documents.json  medium_crossref_documents.json  medium_documents.json  medium_obfuscated_documents.json
server/tasks/: __init__.py  task_easy.py  task_hard.py  task_hard_adversarial.py  task_medium.py  task_medium_crossref.py  task_medium_obfuscated.py
tasks/a1b2c3d4-1111-4000-a000-000000000001/: auxiliary_data.json  grader.py  task.json
tasks/a1b2c3d4-2222-4000-a000-000000000002/: auxiliary_data.json  grader.py  task.json
tasks/a1b2c3d4-3333-4000-a000-000000000003/: auxiliary_data.json  grader.py  task.json
tasks/a1b2c3d4-4444-4000-a000-000000000004/: auxiliary_data.json  grader.py  task.json
tasks/a1b2c3d4-5555-4000-a000-000000000005/: auxiliary_data.json  grader.py  task.json
