[project]
name = "pii-scanner-env"
version = "1.0.0"
description = "OpenEnv environment for PII detection, classification, and redaction"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "gradio>=4.0.0",
    "openai>=1.0.0",
    "requests>=2.25.0",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
