[project]
name = "pii-forge"
version = "2.0.0"
description = "PII detection and redaction powered by Microsoft Presidio + Aho-Corasick"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "gradio>=4.0.0",
    "openai>=1.0.0",
    "requests>=2.25.0",
    "websockets>=12.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "pyahocorasick>=2.0.0",
    "spacy>=3.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
